# simple-ci-demo

./: CMakeLists.txt  calculator.cpp  calculator.h  ci.yml  test_calculator.cpp
